--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^7.4.0",
     "eslint-config-react-app": "^5.2.1",
+    "eslint-plugin-emotion": "^10.0.27",
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-jsx-a11y": "^6.3.1",
     "eslint-plugin-react": "^7.20.3",
