--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-helmet": "^6.1.0"
   },
   "devDependencies": {
+    "@danbruegge/gatsby-plugin-stylelint": "^4.1.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^7.4.0",
     "eslint-config-react-app": "^5.2.1",
@@ -31,7 +32,11 @@
     "eslint-plugin-react": "^7.20.3",
     "eslint-plugin-react-hooks": "^4.0.6",
     "gatsby-plugin-eslint": "^2.0.8",
-    "prettier": "2.0.5"
+    "prettier": "2.0.5",
+    "stylelint": "^13.6.1",
+    "stylelint-config-recommended": "^3.0.0",
+    "stylelint-config-styled-components": "^0.1.1",
+    "stylelint-processor-styled-components": "^1.10.0"
   },
   "keywords": [
     "gatsby"
